{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 5,
  "lineage": "9fa3937d-c457-0cba-ba1f-ba6a283efc20",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:507250483285:security-group/sg-02ad8dcd4228485e9",
            "description": "managed by terraform",
            "egress": [],
            "id": "sg-02ad8dcd4228485e9",
            "ingress": [],
            "name": "terraform-firewall",
            "name_prefix": "",
            "owner_id": "507250483285",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-095f761a169c10b8e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:507250483285:security-group-rule/sgr-0c316bf8ee7c47321",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c316bf8ee7c47321",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02ad8dcd4228485e9",
            "security_group_rule_id": "sgr-0c316bf8ee7c47321",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.example"
          ]
        }
      ]
    }
  ]
}